Fixes: NB#249855 - Groupheaders' grey color tone hard to read
RevBy: TrustMe

--- a/base/meegotouch/libmeegotouchviews/style/commonlayouts/commonlabelstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/commonlayouts/commonlabelstyle.css
@@ -210,7 +210,7 @@ margin-right:  $INDENT_DEFAULT;
 }
 #CommonGroupHeader { /* Updated according to 1_5_9 but contains temporary values */
 font:          $FONT_FAMILY bold 18;
-color:         #3C3C3C;
+color:         #8C8C8C;
 margin-top:    $MARGIN_XLARGE; /* temporary value due to font issues FIX ME */ 
 margin-bottom: $MARGIN_XSMALL; /* temporary value due to font issues FIX ME */
 margin-left:   $MARGIN_LARGE;
@@ -517,7 +517,7 @@ margin-right:  $INDENT_DEFAULT;
 }
 #CommonGroupHeaderInverted { /* Updated according to 1_5_9 */
 font:          $FONT_FAMILY bold 18;
-color:         #4D4D4D;
+color:         #707070;
 margin-top:    $MARGIN_XLARGE; /* temporary value due to font issues FIX ME */ 
 margin-bottom: $MARGIN_XSMALL; /* temporary value due to font issues FIX ME */
 margin-left:   $INDENT_DEFAULT;
